# Marukov-JS

./: .gitignore  Cargo.toml  LICENSE.md  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: package.json
scripts/: fix-types.mjs
src/: lib.rs
