[package]
name = "marukov-js"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
marukov = "0.0.2"
napi = { version = "2", features = ["napi6"] }
napi-derive = "2"
rayon = "1"
ctor = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
